# GameOfDices

./: .gitignore  CMakeLists.txt  README.md  runGameOfDices.sh
cmake_modules/: FindCSFML.cmake
doc/: licencja_czcionki.txt  specyfikacja.aux  specyfikacja.tex
res/: CMakeLists.txt  balls.xcf
src/: CMakeLists.txt  IntroState.c  IntroState.h  Language.h  MainMenuState.c  MainMenuState.h  PLAY.c  PLAY.h  PauseMenuState.c  PauseMenuState.h  TheGameState.c  TheGameState.h  WinnerState.c  WinnerState.h  main.c
src/DryEngine/: ConfigParser.h  Engine.c  Engine.h  Hexmap.c  Hexmap.h  HexmapLoader.c  HexmapLoader.h  Layer.h  List.c  List.h  Rank.h  ResManager.c  ResManager.h  Snippets.h  Stack.c  Stack.h  State.h  Types.h
tests/: HexMap_test.c  List_test.c  MapCreator_test.c  battlefield  battlefield.c  luatest.c  map_generator.lua
